# korean-keyboard

./: .gitignore  INSTALL_TOOLS.md  LICENSE  README.md  TESTING_GUIDE.md  build.bat  build_config.txt  build_minGW.bat  check-archaic-unicode.js  check-h-unicode.js  check-hwot-unicode.js  debug-archaic-composition.js  debug-h-character.js  debug-unicode.js  dev.bat  index.html  install.bat  jest.config.js  korean-keyboard.code-workspace  package-lock.json  package.json  run-tests.js  setup_dev_environment.bat  setup_dev_environment.ps1  test-archaic-final-consonant.js  test-archaic-mappings.js  test-conversion.js  test-dom-approaches.js  test-dom-manipulation.html  test-fix-verification.js  test-fixed-mappings.js  test-korean-composition.js  test-korean.js  test-unicode-composition.js  test-unicode-mapping.html  test.bat  test_core.cpp  tsconfig.json  vite.config.mjs  vite.config.ts
.github/workflows/: deploy.yml
KoreanArchaicKeyboard/: Info.plist  KoreanArchaicKeyboard.swift  KoreanArchaicKeyboardViewController.swift  KoreanJamoProcessor.swift
KoreanArchaicKeyboard.xcodeproj/: project.pbxproj
docs/: DEPLOYMENT.md  DEVELOPMENT.md  FONT_CACHING.md  INSTALL_TOOLS.md  TESTING_GUIDE.md  VERSION_DISPLAY.md  bugs-issues.md  development-plan.md  spec.md
include/: Configuration.h  JamoProcessor.h  TSFManager.h
public/: manifest.json  sw.js
public/assets/: icon.ai
scripts/: clear-cache.js  test-font-caching.js  test-version-display.js  update-version.js
src/: App.jsx  App.tsx  main.jsx  main.tsx
src/components/: KoreanKeyboard.jsx  KoreanKeyboard.tsx
src/constants/: version.ts
src/core/: KoreanInputProcessor.ts  index.ts  package.json
src/styles/: keyboard.css  main.css  noteapp.css
src/types/: korean.ts
src/utils/: composition.ts  inputProcessor.ts  keyboardLayout.ts  koreanKeyboard.js  koreanKeyboard.ts  test.ts  (+1 more)
src/windows/: CMakeLists.txt  Configuration.cpp  JamoProcessor.cpp  TSFManager.cpp  TSFManager.h  main.cpp
tests/: CMakeLists.txt  simple_test.cpp  test_comprehensive_mapping.cpp  test_jamo_processor.cpp
(+1 files in other folders)
